Sequenced collection